--- a/scene-swiper/index.html
+++ b/scene-swiper/index.html
@@ -28,7 +28,7 @@
     <div id="containerTop">
       <div id="viewTop" touch-action="none"></div>
     </div>
-    <header>Scene Swiper</header>
+    <header> </header>
     <script>
       require(["app/main", "dojo/domReady!"]);
     </script>
